--- a/IOSModelBay/Views/MB_SummaryTableViewCell.xib
+++ b/IOSModelBay/Views/MB_SummaryTableViewCell.xib
@@ -27,7 +27,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="啦啦啦德玛西亚" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kq1-PU-kgW">
-                                <rect key="frame" x="141" y="19" width="119" height="21"/>
+                                <rect key="frame" x="132" y="19" width="128" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -35,7 +35,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Kq1-PU-kgW" firstAttribute="leading" secondItem="5xE-vt-bOH" secondAttribute="trailing" constant="9" id="CT4-QU-qqq"/>
+                            <constraint firstItem="Kq1-PU-kgW" firstAttribute="leading" secondItem="5xE-vt-bOH" secondAttribute="trailing" id="CT4-QU-qqq"/>
                             <constraint firstItem="5xE-vt-bOH" firstAttribute="leading" secondItem="D2W-nM-fi8" secondAttribute="leading" constant="20" id="dbI-If-4I7"/>
                             <constraint firstItem="5xE-vt-bOH" firstAttribute="top" secondItem="D2W-nM-fi8" secondAttribute="top" id="dou-I1-3Db"/>
                             <constraint firstAttribute="trailing" secondItem="Kq1-PU-kgW" secondAttribute="trailing" constant="20" id="e19-hZ-PlS"/>
@@ -54,6 +54,7 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="mainLabel" destination="5xE-vt-bOH" id="ylQ-pJ-o7U"/>
+                <outlet property="mainLabelWidth" destination="GFG-jy-XuI" id="SUc-iR-AdP"/>
                 <outlet property="subLabel" destination="Kq1-PU-kgW" id="gmS-GH-une"/>
             </connections>
             <point key="canvasLocation" x="175" y="386"/>
