--- a/IOSModelBay/Controllers/MB_AddTextViewController.xib
+++ b/IOSModelBay/Controllers/MB_AddTextViewController.xib
@@ -34,7 +34,10 @@
                         <constraint firstAttribute="height" constant="100" id="7bU-Fc-t57"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="qnJ-XC-sx4"/>
+                    </connections>
                 </textField>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jfN-7n-EuC">
                     <rect key="frame" x="0.0" y="252" width="320" height="100"/>
